--- a/style.css
+++ b/style.css
@@ -10,4 +10,132 @@
 
 *{
     font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--Light-grey);
+}
+
+.card{
+    background-color: var(--White);
+    width: 600px;
+    border-radius: 15px 15px 150px 15px;
+}
+
+.container{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+.input-container{
+    display: flex;
+    gap: 2rem;
+}
+
+.block{
+    display: flex;
+    flex-direction: column;
+}
+
+.block label{
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+input{
+    width: 100px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid var(--Light-grey);
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+}
+
+input::placeholder{
+    font-size: 20px;
+    font-weight: 800;
+}
+
+input:hover {
+    border: 1px solid var(--Purple);
+}
+
+.submit-block{
+    display: flex;
+    align-items: center;
+}
+
+.submit-block hr{
+    width: 100%;
+}
+
+.submit-block .submit-btn{
+    border-radius: 50%;
+    background-color: var(--Purple);
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.submit-block .submit-btn:hover{
+    background-color: var(--Off-black);
+}
+
+.resposta h1{
+    font-size: 56px;
+    font-weight: 800;
+    font-style: italic;
+    height: fit-content;
+}
+
+.resposta span{
+    color: var(--Purple);
+}
+small{
+    color: red;
+}
+
+@media screen and (max-width: 600px) {
+    .card{
+        width: 360px;
+    }
+    .container{
+        padding: 1rem;
+    }
+    .input-container{
+        margin-bottom: 5rem;
+        gap: 0;
+        justify-content: space-between;
+    }
+    .submit-block{
+        position: relative;
+    }
+    .submit-btn{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .resposta{
+        margin-top: 5rem;
+    }
+    .resposta h1{
+        font-size: 3.5rem;
+    }
 }
